--- a/environment.yaml
+++ b/environment.yaml
@@ -9,7 +9,7 @@ dependencies:
   - pytorch-cuda=11.8
   - pip
   - pip:
-      - open3d==0.18.0
+      - open3d
       - gymnasium
       - stable-baselines3[extra]
       - tensorboard
