Add third-party submodules

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-open3d
-gymnasium
-stable-baselines3[extra]
-tensorboard
-numpy
-pyyaml
+ open3d==0.18.0
+ gymnasium
+ stable-baselines3[extra]
+ tensorboard
+ numpy
+ pyyaml
+ wandb
+ sb3_contrib
