--- a/configs/ppo_fovea.yaml
+++ b/configs/ppo_fovea.yaml
@@ -1,4 +1,7 @@
-# PPO hyperparameters for Fovea3DPointRL
+# configs/ppo_fovea.yaml
+#
+# PPO hyperparameters for training the foveated attention agent.
+
 learning_rate: 3e-4
 n_steps: 2048
 batch_size: 1024
@@ -8,3 +11,4 @@ clip_range: 0.2
 ent_coef: 0.01
 vf_coef: 0.5
 max_grad_norm: 0.5
+n_epochs: 10
